--- a/calendario.html
+++ b/calendario.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="css/calendario.css">
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
+    <link rel="icon" sizes="192x192" href="img/icon.png">
+    <link rel="icon" sizes="512x512" href="img/icon.png">
+    <link rel="apple-touch-icon" href="img/icon.png">
   </head>
   <body>
     <div class="top" id="azultop">
