--- a/semanaasemana.html
+++ b/semanaasemana.html
@@ -9,6 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@200&family=Montserrat:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/semana.css">
+
+  <link rel="shortcut icon" type="image/x-icon" href="img/icon.png">
+  <link rel="icon" sizes="192x192" href="img/icon.png">
+  <link rel="icon" sizes="512x512" href="img/icon.png">
+  <link rel="apple-touch-icon" href="img/icon.png">
   <title>Semana a semana</title>
 </head>
 <body>
